<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF2"
    tools:context=".PersonalActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:id="@+id/imageV_Cont"
        android:layout_alignParentTop="true"
        android:background="@drawable/grad"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:id="@+id/imageV"
            android:src="@drawable/crop_netclan"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="355dp"
        android:elevation="7dp"
        android:layout_centerHorizontal="true"
        android:padding="18dp"
        android:background="@drawable/circle_corner_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Let's Get Started"
            android:textStyle="bold"
            android:textColor="@color/statusBarColor"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:id="@+id/country_code"
                android:textColor="@color/statusBarColor"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="+91, INDIA"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="bottom"
                android:src="@drawable/baseline_arrow_forward_ios_24"/>
        </LinearLayout>

        <EditText
            android:layout_marginTop="18dp"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:id="@+id/contact_num"
            android:textSize="14sp"
            android:inputType="number"
            android:textColorHint="#243745"
            android:textColor="#243745"
            android:hint="Please enter phone number"/>
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONTINUE"
            android:backgroundTint="@color/statusBarColor"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change phone number?"
            android:textColor="@color/statusBarColor"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingBottom="25dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disc_1"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:textColor="@color/statusBarColor"
                android:text="@string/term"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disc_2"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:textColor="@color/statusBarColor"
                android:text="@string/privacy"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disc_3"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:textColor="@color/statusBarColor"
                android:text="@string/disclaimer"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>