<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_corner_background"
        android:elevation="20dp"
        android:id="@+id/btn_cont1"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="MissingConstraints"
                android:background="@drawable/circle_background">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/user"
                    app:tint="@color/white"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingLeft="9dp"
                android:paddingRight="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Personal"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="#133D59"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Join and build real time community"
                    android:fontFamily="@font/notofont"
                    android:textStyle="normal"
                    android:textSize="10sp"
                    android:textColor="#133D59"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/expand1"
            android:paddingTop="0dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >
            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:padding="10dp"
                android:text="@string/detail1"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_cnfm_1"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONFIRM"
                android:textColor="@color/statusBarColor"
                android:textSize="10sp"
                android:backgroundTint="@color/white"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="67dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_corner_background"
        android:orientation="vertical"
        android:elevation="20dp"
        android:id="@+id/btn_cont2">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="MissingConstraints"
                android:background="@drawable/circle_background">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/briefcase"
                    app:tint="@color/white"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingLeft="9dp"
                android:paddingRight="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Business"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="#133D59"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="World's largest real time service community"
                    android:fontFamily="@font/notofont"
                    android:textStyle="normal"
                    android:textSize="10sp"
                    android:textColor="#133D59"
                    android:maxLines="1"/>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:visibility="gone"
            android:id="@+id/expand2"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:padding="10dp"
                android:text="@string/detail2"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_cnfm_2"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONFIRM"
                android:textColor="@color/statusBarColor"
                android:textSize="10sp"
                android:backgroundTint="@color/white"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="67dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_corner_background"
        android:orientation="vertical"
        android:elevation="20dp"
        android:id="@+id/btn_cont3"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="MissingConstraints"
                android:background="@drawable/circle_background">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/shop"
                    app:tint="@color/white"
                    tools:ignore="MissingConstraints" />
            </RelativeLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingLeft="9dp"
                android:paddingRight="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Merchant"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="#133D59"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="World's largest real time merchant's community"
                    android:fontFamily="@font/notofont"
                    android:textStyle="normal"
                    android:textSize="10sp"
                    android:textColor="#133D59"
                    android:maxLines="1"/>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/expand3"
            android:paddingTop="0dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            >

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:padding="10dp"
                android:text="@string/detail3"/>
            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_cnfm_3"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONFIRM"
                android:textColor="@color/statusBarColor"
                android:textSize="10sp"
                android:backgroundTint="@color/white"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>